--- a/css/very-small-devices.css
+++ b/css/very-small-devices.css
@@ -1,12 +1,12 @@
-@media only screen and (min-width : 480px) and (max-width : 999px) {
+@media only screen and (min-width : 0) and (max-width : 479px) {
     /* HEADER */
 
     .header {
-        height: 550px;
+        height: 900px;
     }
 
     .header_background-wrap {
-        height: 550px;
+        height: 900px;
         background: url('../img/bg-header.png') no-repeat center top/cover;
     }
 
@@ -20,29 +20,29 @@
     }
 
     .header-navigation {
-        margin: 41px auto 0 auto;
-        display: flex;
-        justify-content: space-around;
-        max-width: 600px;
+        margin-top: 21px;
+    }
+
+    .header-navigation li {
+        display: block;
     }
 
     .header-navigation a {
+        display: block;
+        font: 36px 'Roboto Regular';
         color: #FFF;
-        padding: 11px;
+        padding: 17px 43px 18px 43px;
         margin-top: 5px;
     }
 
     .header-navigation a:hover {
-        color: #5584FF;
-        border: #5584FF solid 1px;
-        border-radius: 15px;
-        padding: 10px;
+        border-radius: 0;
     }
 
     .header h1 {
         font: 30px 'Roboto Thin';
         color: #FFF;
-        margin-top: 103px;
+        margin-top: 33px;
     }
 
     .header h2 {
@@ -91,7 +91,6 @@
     .first-section__bottom {
         display: flex;
         flex-direction: column;
-        height: 1000px;
     }
 
     .first-section__bottom_left {
@@ -103,9 +102,7 @@
     }
 
     .tablet {
-        margin-top: 100px;
-        max-height: 440px;
-        float: right;
+        margin-top: 40px;
     }
 
     .first-section__bottom_left_text {
@@ -120,7 +117,8 @@
     }
 
     .first-section__bottom_left_text p {
-        margin: 0 auto;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .first-section__bottom_left_text_check {
@@ -128,7 +126,7 @@
     }
 
     .first-section__bottom_left_text_check img {
-        margin: 35px 10px 0 auto;
+        margin: 35px 15px 0 15px;
         float: none;
     }
 
@@ -140,7 +138,7 @@
     /* THIRD SECTION */
 
     .third-section__top {
-        height: 300px;
+        height: 400px;
     }
 
     .third-section__top h1 {
@@ -160,7 +158,7 @@
     }
 
     .third-section__bottom {
-        height: 1680px;
+        height: 1780px;
     }
 
     .third-section__bottom h1 {
@@ -224,10 +222,15 @@
 
     /* FOOTER */
 
+    .footer {
+        height: 100px;
+    }
+
     .footer>.container {
         width: 100%;
-        /* display: flex;
-        justify-content: center; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     .footer__all-right-reserved {
@@ -236,26 +239,32 @@
 
     .footer-navigation {
         float: none;
-    }
-
-    .footer-navigation {
-        width: 100%;
-        padding-top: 65px;
-        margin-left: auto;
-        margin-right: auto;
+        margin-top: 20px;
     }
 
     .footer-navigation li {
-        margin-right: 30px;
+        margin-left: 30px;
+        margin-right: 0;
     }
 
     .footer-navigation li:first-child {
-        margin-left: 50px;
+        margin-left: 0;
     }
 
     .footer-navigation li:last-child {
-        float: right;
-        margin-right: 50px;
+        display: none;
     }
 
+    .hide-ico {
+        display: block;
+        margin-top: 15px;
+    }
+    
+    .hide-ico a {
+        margin-left: 30px;
+    }
+
+    .hide-ico a:first-child {
+        margin-left: 0;
+    }
 }
