--- a/css/very-small-devices.css
+++ b/css/very-small-devices.css
@@ -109,6 +109,7 @@
         width: 100%;
         text-align: center;
         margin-top: 50px;
+        margin-left: 0;
     }
 
     .first-section__bottom_left_text h1 {
